--- a/estimator/package.xml
+++ b/estimator/package.xml
@@ -2,7 +2,7 @@
 <package>
   <name>estimator</name>
   <version>0.0.0</version>
-  <description>The vins package</description>
+  <description>The estimator package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
